Changed the sizes Sizes is looking up the database

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,6 +20,18 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
+  new_size: "The size is not listed"
+  size_saved: "A new cloth size is added to the database. Please review the new data below."
+  cloth_created: "Cloth created"
+  shoes: "Shoes"
+  pant: "Pant"
+  shirt: "Shirt"
+  csize: "Size"
+  ctype: "Type"
+  cgender: "Gender"
+  cdescription: "Description"
+  male: "Male"
+  female: "Female"
   active: "Active"
   cancel: "Cancel"
   child: "Child"
@@ -77,15 +89,15 @@ en:
   impressum: "Impressum"
   home: "Home"
   name: "Name"
-  midyear_attendance: "Attendance"
+  midyear_attendance: "July Attendance"
   midyear_attendance_notes: "July Attendance Notes"
   internal_controls: "Internal control"
-  midyear_grade: "Grade"
-  midyear_pant_size: "Pant Size"
-  midyear_shirt_size: "Shirt Size"
-  midyear_shoe_size: "Shoe Size"
-  midyear_work_form: "Is the Work form available?"
-  midyear_report_card: "Report Card"
+  midyear_grade: "Grade in July"
+  midyear_pant_size: "Pant Size in July"
+  midyear_shirt_size: "Shirt Size in July"
+  midyear_shoe_size: "Shoe Size in July"
+  midyear_work_form: "July Work form"
+  midyear_report_card: "July Report Card"
   new: "New"
   new_child: "New Child"
   new_community: "New Community"
@@ -95,14 +107,14 @@ en:
   new_guardian: "New Guardian"
   new_sponsor: "New Sponsor"
   new_sponsorship: "New Sponsorship"
-  newyear_attendance: "Attendance"
+  newyear_attendance: "January Attendance"
   newyear_attendance_notes: "January Attendance Notes"
-  newyear_grade: "Grade"
-  newyear_pant_size: "Pant Size"
-  newyear_shirt_size: "Shirt Size"
-  newyear_shoe_size: "Shoe Size"
-  newyear_report_card: "Report Card"
-  newyear_work_form: "Is the Work form available?"
+  newyear_grade: "Grade in January"
+  newyear_pant_size: "Pant Size in January"
+  newyear_shirt_size: "Shirt Size in January"
+  newyear_shoe_size: "Shoe Size in January"
+  newyear_report_card: "January Report Card"
+  newyear_work_form: "January Work form"
   next_code: "Next Code"
   not_included: "Not Included"
   included: "Included"
@@ -159,6 +171,7 @@ en:
   use_spanish: "Spanish"
   work_form_notes: "Work Form Notes"
   attendance: "Attendance"
+  size_clothes: "Size of the shirts, pants or shoes"
   bool:
     "true": "True"
     "false": "False"
@@ -197,6 +210,8 @@ en:
     grade12: "12"
     special_needs: "Special Needs"
   enrollment_shirt_sizes:
+    male: "Male Hombre"
+    female: "Female Mujer"
     male_4: "Male Hombre 4"
     male_6: "Male Hombre 6"
     male_8: "Male Hombre 8"
@@ -205,14 +220,14 @@ en:
     male_14: "Male Hombre 14"
     male_16: "Male Hombre 16"
     male_18: "Male Hombre 18/XS"
-    male_s: "Male Hombre S"
-    male_m: "Male Hombre M"
-    male_l: "Male Hombre L"
-    male_k4: "Male Hombre K4"
-    male_k6: "Male Hombre K6"
-    male_k8: "Male Hombre K8"
-    male_k10: "Male Hombre K10"
-    male_k12: "Male Hombre K12"
+    male_S: "Male Hombre S"
+    male_M: "Male Hombre M"
+    male_L: "Male Hombre L"
+    male_K4: "Male Hombre K4"
+    male_K6: "Male Hombre K6"
+    male_K8: "Male Hombre K8"
+    male_K10: "Male Hombre K10"
+    male_K12: "Male Hombre K12"
     female_6: "Female Mujer 6"
     female_8: "Female Mujer 8"
     female_10: "Female Mujer 10"
@@ -220,12 +235,12 @@ en:
     female_14: "Female Mujer 14"
     female_16: "Female Mujer 16XS"
     female_18: "Female Mujer 18/S"
-    female_m: "Female Mujer M"
-    female_k4: "Female Mujer K4"
-    female_k6: "Female Mujer K6"
-    female_k8: "Female Mujer K8"
-    female_k10: "Female Mujer K10"
-    female_k12: "Female Mujer K12"
+    female_M: "Female Mujer M"
+    female_K4: "Female Mujer K4"
+    female_K6: "Female Mujer K6"
+    female_K8: "Female Mujer K8"
+    female_K10: "Female Mujer K10"
+    female_K12: "Female Mujer K12"
     other: "Other"
   enrollment_pant_sizes:
     male_2: "Male Hombre 2"
