--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -20,6 +20,18 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 es:
+  new_size: "The size is not listed"
+  size_saved: "Un tamano de ropa has adicionado al banco de dados. Por favor revise el nuevo dato abajo."
+  cloth_created: "Ropa creada"
+  shoes: "Zapatos"
+  pant: "Pantalones"
+  shirt: "Camisa"
+  csize: "Tamano"
+  ctype: "Tipo"
+  cgender: "Genero"
+  cdescription: "Descripción"
+  male: "Hombre"
+  female: "Mujer"
   active: "Activo"
   cancel: "Cancelar"
   child: "Niño"
@@ -77,14 +89,14 @@ es:
   home: "Pagina Principal"
   internal_controls: "Controle interno"
   name: "Nombre"
-  midyear_attendance: "Asistencia"
+  midyear_attendance: "Asistencia en Julio"
   midyear_attendance_notes: "Apuntes de Asistencia de Julio"
-  midyear_grade: "Grado"
-  midyear_pant_size: "Talla de Pantalones"
-  midyear_shirt_size: "Talla de Camisa"
-  midyear_shoe_size: "Tallas de Zapatos"
-  midyear_work_form: "La Boleta esta disponible?"
-  midyear_report_card: "Nota"
+  midyear_grade: "Grado en Julio"
+  midyear_pant_size: "Talla de Pantalones en Julio"
+  midyear_shirt_size: "Talla de Camisa en Julio"
+  midyear_shoe_size: "Tallas de Zapatos en Julio"
+  midyear_work_form: "Boleta de Julio"
+  midyear_report_card: "Nota de Julio"
   new: "Nuevo"
   new_child: "Nuevo Niño"
   new_community: "Nueva Comunidad"
@@ -94,18 +106,19 @@ es:
   new_guardian: "Nuevo Encargado"
   new_sponsor: "Nuevo Patrocinador"
   new_sponsorship: "Nuevo Patrocinio"
-  newyear_attendance: "Asistencia"
+  newyear_attendance: "Asistencia de Enero"
   newyear_attendance_notes: "Apuntes de Asistencia de Enero"
-  newyear_grade: "Grado"
-  newyear_pant_size: "Talla de Pantalones"
-  newyear_shirt_size: "Talla de Camisa"
-  newyear_shoe_size: "Tallas de Zapatos"
-  newyear_report_card: "Nota"
-  newyear_work_form: "La Boleta esta disponible?"
+  newyear_grade: "Grado en Enero"
+  newyear_pant_size: "Talla de Pantalones en Enero"
+  newyear_shirt_size: "Talla de Camisa en Enero"
+  newyear_shoe_size: "Tallas de Zapatos en Enero"
+  newyear_report_card: "Nota en Enero"
+  newyear_work_form: "Boleta de Enero"
   next_code: "Siguiente Código"
   not_included: "No Incluido"
   included: "Incluido"
   number_children: "Numero de Niños"
+  size_clothes: "Talla de las camisas, pantalones y zapatos"
   notes: "Apuntes"
   letter: "Cartas"
   link: "Enlazar"
