Added given name on enrollment
Added given name 1 and given name 2 to show, new and edit forms of enrollment.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,6 +20,7 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
+  child_name: "Given Name"
   new_size: "The size is not listed"
   size_saved: "A new cloth size is added to the database. Please review the new data below."
   cloth_created: "Cloth created"
